<resources>
    <!-- app name -->
    <string name="app_name">Order Bread</string>

    <!-- base activity and toolbar -->
    <string name="base_dialog_erro">Algo de errado aconteceu</string>

    <!-- carrossel (CustomDots) component -->
    <string name="page_bread_img_desc">foto do pão</string>

    <!-- counter component -->
    <string name="custom_counter_minus">-</string>
    <string name="custom_counter_plus">+</string>
    <string name="custom_counter_delete">X</string>

    <!-- bread list -->
    <string name="bread_list_item_thumb_desc">Imagem do pão</string>
    <string name="bread_list_title">Order Bread</string>
    <string name="bread_list_cart_button">Total de itens no carrinho: %d</string>
    <string name="bread_list_cart_button_ico_desc">ícone de um carrinho de compras</string>

    <!-- details -->
    <string name="details_description">Descrição</string>
    <string name="details_price">Preço</string>
    <string name="details_combinations">Combina com</string>
    <string name="details_flavor">Descrição do sabor</string>
    <string name="details_dimensions">Dimensões</string>
    <string name="details_durability">Durabilidade</string>
    <string name="details_ingredients">Ingredientes</string>
    <string name="details_alergics">Atenção alérgicos</string>
    <string name="details_nutritional">Tabela nutricional</string>
    <string name="details_nutritional_table_desc">Tabela contendo os valores</string>
    <string name="details_price_value">R$ %s</string>
    <string name="details_order">Encomendar</string>
    <string name="details_error_max_per_item">
        Você pode somente adicionar no máximo %d pães de cada tipo. 
        Isso acontece devido a nossa capacidade de atender as encomendas.
    </string>
    <string name="details_error_max_tems_cart">
        Você pode somente adicionar no máximo %d itens de cada tipo no carrinho.
        Isso acontece devido a nossa capacidade de atender as encomendas.
    </string>

    <!-- login -->
    <string name="login_title">Login</string>
    <string name="login_error_code">Erro ao efetuar login, tente mais tarde. Código: %s</string>

    <!-- firebase UI -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_error_canceled">Login cancelado</string>

    <!-- cart -->
    <string name="cart_title">Carrinho de compras</string>
    <string name="cart_item_bread_desc">Imagem do pão que foi adicionado ao carrinho</string>
    <string name="cart_button_checkout">Efetuar o pagamento do total: R$ %s</string>
    <string name="cart_item_price">Unidade: R$ %s</string>
    <string name="cart_item_total">Total do item: R$ %s</string>
    <string name="cart_error_max_per_item">
        Você pode somente adicionar no máximo %d pães de cada tipo. 
        Isso acontece devido a nossa capacidade de atender as encomendas.
    </string>
    <string name="checkout_resume">Resumo</string>
    <string name="checkout_price_total">Total a ser pago</string>
    <string name="checkout_price_total_value">R$ %s</string>
    <string name="checkout_place_to_get_order">Local da retirada</string>
    <string name="checkout_credit_card">Cartão de crédito</string>
    <string name="checkout_order_date">Data do pedido</string>
    <string name="checkout_date_order_value">%s às %s</string>
    <string name="checkout_date_get_order">Previsão da retirada</string>
    <string name="checkout_date_get_order_value">%s às %s</string>
    <string name="checkout_pay">Pagar</string>
    <string name="checkout_get_location_error">
        Não foi possível obter sua localização, por favor, verifique se o
        serviço de localização do seu dipositivo está ligado e tente mais tarde.
    </string>
    <string name="checkout_get_location_permission_denied">Você precisa permitir utilizar sua localização para
        prosseguir
    </string>
    <string name="base_dialog_info">Informação</string>
    <string name="checkout_permission_title">Permissão para acessar sua localização</string>
    <string name="checkout_permission_message">Permissão para acessar sua localização é necessária para analizarmos se
        possímos locais de retirada na sua cidade.
    </string>
    <string name="checkout_resume_item">%s x %s = R$ %s</string>
    <string name="checkout_credit_card_value">XXXX.XXXX.XXXX.%s</string>
    <string name="checkout_credit_card_empty">Cadastre um cartão para continuar</string>
    <string name="checkout_shippingTypeTitle">Tipo de entrega</string>
    <string name="checkout_local_shipping_title">Endereço de entrega</string>
    <string name="checkout_button_shipping_type">Trocar tipo da entrega</string>
    <string name="checkout_button_local_shipping">Trocar local</string>
    <string name="checkout_button_place_get_order">Trocar local</string>
    <string name="checkout_button_change_credit_card">Alterar cartão de crédito</string>
</resources>
