<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.checkout.CheckoutActivity">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/scrollView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/checkout_resume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvResume"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    style="@style/TextViewSecondary"
                    tools:text="2 x pão de azeite, 1 x pão integral especial, 2 x pão de azeite, 1 x pão integral especial"/>

            <TextView
                    android:text="@string/checkout_price_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvResume"/>

            <TextView
                    android:text="@string/checkout_price_total_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTotalPrice"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    style="@style/TextViewSecondary"/>

            <TextView
                    android:text="@string/checkout_place_to_get_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvTotalPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPlaceGetOrder"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    style="@style/TextViewSecondary"
                    tools:text="Address: R. Mal. Deodoro, 708 - Loja B - Centro, Curitiba - PR, 80010-010 Hours:  Open ⋅ Closes 7:30PM    Phone: (41) 3019-3699"/>

            <app.mobify.orderbreadandroid.widgets.CustomImageButton
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    app:cib_text="Trocar local"
                    app:cib_src="@mipmap/baseline_place_white_48"
                    android:id="@+id/cibChangePlaceGetOrder"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvPlaceGetOrder"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>

            <TextView
                    android:text="@string/checkout_credit_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/cibChangePlaceGetOrder"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCreditCard"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    style="@style/TextViewSecondary"
                    tools:text="XXXX.XXXX.XXXX.XX21"/>

            <app.mobify.orderbreadandroid.widgets.CustomImageButton
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    app:cib_text="Alterar cartão de crédito"
                    app:cib_src="@mipmap/baseline_credit_card_white_48"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCreditCard"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/cibCreditCard"/>

            <TextView
                    android:text="@string/checkout_order_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView19"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/cibCreditCard"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvOrderDate"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView19"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    style="@style/TextViewSecondary"
                    android:text="@string/checkout_date_order_value"/>

            <TextView
                    android:text="@string/checkout_date_get_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView21"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvOrderDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="20dp"/>

            <TextView
                    android:text="@string/checkout_date_get_order_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDateToGetOrder"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView21"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    style="@style/TextViewSecondary"
                    />

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bPay"
                    android:text="@string/checkout_pay"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvDateToGetOrder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>